Bug 152186 - The shape gets a shadow when saving PPTX.
Summary: The shape gets a shadow when saving PPTX.
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Tibor Nagy
URL:
Whiteboard: target:7.5.0 target:7.4.4
Keywords: possibleRegression
Depends on:
Blocks:
 
Reported: 2022-11-23 13:48 UTC by NISZ LibreOffice Team
Modified: 2022-12-05 13:24 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Sample file (31.87 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2022-11-23 13:49 UTC, NISZ LibreOffice Team
Details
Screenshot of the problem (Left) Powerpoint, (Right) LO (39.69 KB, image/png)
2022-11-23 13:52 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2022-11-23 13:48:08 UTC
Description:
When I create a shape in powerpoint and save it to pptx, 
and then open it in libreoffice, the shape gets a shadow.


Steps to Reproduce:
1. Creat a shape in Powerpoint and save it PPTX.
2. Open PPTX in LO, after save as and reload.

Actual Results:
The shape gets a shadow.

Expected Results:
The shape should not be in shadow.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 1435c5b12646269e2b5b58ec7d51626dce6505db
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded
Comment 1 NISZ LibreOffice Team 2022-11-23 13:49:03 UTC
Created attachment 183735 [details]
Sample file
Comment 2 NISZ LibreOffice Team 2022-11-23 13:52:53 UTC
Created attachment 183736 [details]
Screenshot of the problem (Left) Powerpoint, (Right) LO
Comment 3 László Németh 2022-11-29 17:15:34 UTC
Is it possible, the placeholder was correct for an older PPTX, i.e. it depends on the compatibility value? It would be fine to test that, too.
Comment 4 Commit Notification 2022-11-29 17:15:50 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/bfe33d42a2381bce194cc6fe15b830902f7c8443

tdf#152186 PPTX export: fix shadow of the shape in theme

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 NISZ LibreOffice Team 2022-11-30 10:23:27 UTC
Verified in:
Version: 7.5.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: bfe33d42a2381bce194cc6fe15b830902f7c8443
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded
Comment 6 Commit Notification 2022-12-05 13:24:38 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/21044e1469e95d30422c498ad0119d0ce76a6acd

tdf#152186 PPTX export: fix shadow of the shape in theme

It will be available in 7.4.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.